# dn_exploration

./: pyproject.toml
Notebooks/: 00_exploration.ipynb  00_exploration.py  14a_optim_csf.ipynb
Scripts/: 00_train_tid.py  01_train_imagenette.py  01b_test_imagenette.py  02_train_imagenette_onlycls.py  02b_train_imagenette_onlycls_backbone_tid.py  09a_eval_tid_trained_visturing.py  91_train_all_visturing_1.py  a_star_gdn_control.npy  config_imagenette.py  model.py
src/: training.py  utils.py
src/dn_exploration/: config.py  config_imagenette.py  initialization.py  model.py  training.py  utils.py
