[project]
name = "dn-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax ; sys_platform == 'darwin'",
    "jax[cuda12] ; sys_platform == 'linux'",
    "fxlayers",
    "paramperceptnet",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.8",
    "perceptualtests>=0.1.4",
]

[tool.uv.sources]
fxlayers = { git = "https://github.com/jorgvt/fxlayers" }
paramperceptnet = { git = "https://github.com/jorgvt/paramperceptnet" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
